--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pf": "prisma format",
+    "migrate": "prisma migrate dev"
   },
   "dependencies": {
+    "@2toad/profanity": "^3.0.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.21.1",
+    "next": "14.2.15",
+    "next-auth": "^4.24.8",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.15"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "eslint-config-next": "14.2.15",
+    "prisma": "^5.21.1",
+    "typescript": "^5"
   }
 }
